project-pages/selenity-travels/product-landing.css
html {
  font-family: 'Open Sans', Helvetica, sans-serif;
  background-color: #f9f9fa;
}
body {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0;
}
/*********** header ************/
header {
  background-color: #f9f9fa;
  position: fixed;
  top: 0;
  width: 100vw;
  padding-top: 5px;
  padding-bottom: 5px;
}
.header-container, .icon-title-container, .nav-container {
  display: flex;
  flex-direction: row;
} 
.header-container {
  justify-content: space-between;
  align-items: flex-end;
  width: 76vw;
  max-width: 1260px;
  margin: auto;
}
#nav-bar {
  min-width: 300px;
  font-size: 18px;
}
.nav-container {
  list-style-type: none;
  margin: 0;
  padding: 0;
  justify-content: space-between;
}
.nav-link {
  color: #434343;
  text-decoration-line: none;
}
.nav-link:hover {
  color: #A714D4;
}
/* shrinking header */
/* large */
.header-large {
  height: 110px;
  transition: 0.3s;
}
.image-large {
  height: 110px;
  transition: 0.3s;
  margin-right: 3vh;
  border-radius: 8px;
}
.title-large {
  font-family: Righteous, monospace;
  font-size: 60px;
  margin: 0;
  padding: 0;
  transition: 0.3s;
}
.subtitle-large {
  display: block;
  margin: 0;
  padding: 0;
  font-size: 30px;
  transition: 0.3s;
}
/* small */
.header-small {
  height: 40px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #c0c0c0;
  min-width: 0;
}
.image-small {
  height: 40px;
}
.title-small {
  font-size: 30px;
}
.subtitle-small {
  font-size: 1px;
  opacity: 0;
}

/*********** main ***********/
.main {
  width: 100vw;
}
.subsection {
  width: 76vw;
  margin: auto;
  max-width: 1260px;
  padding-top: 60px;
}
#why-this-matters {
  height: 100vh;
  padding-top: 140px;
  margin-top: 0;
}
h2 {
  padding-bottom: 20px;
  margin: 0;
  font-size: 30px;
}
.package-background {
  background-image: url("night-sky.jpeg");
  background-attachment: fixed;
  background-size: cover;
}
#packages {
  padding-bottom: 80px;
}
.package-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
#package-heading, #package-pricing {
  color: #f9f9fa;
}
.package {
  background-color: #f9f9fa;
  height: 22vw;
  width: 22vw;
  display: flex;
  flex-direction: column;
  min-width: 330px;
  min-height: 330px;
  margin-right: 20px;
}
legend {
  padding-top: 6px;
  font-size: 24px;
  font-weight: bold;
  text-decoration: underline solid #c0c0c0;
  text-align: center;
}
.package-list {
  padding: 0;
  margin: 12px;
  display: flex;
  flex-direction: column;
  list-style-type: none;
  color: #434343;
  line-height: 32px;
}
#form {
  display: flex;
  flex-direction: column;
  width: 330px;
  margin-top: 0;
  padding-top: 0;
}
input {
  margin-bottom: 15px;
}
textarea {
  margin-bottom: 15px;
}
#submit {
  width: 80px;
}
#bottom-third {
  display: flex;
  flex-direction: row;
  align-items: space-between;
}
#about {
  max-width: 600px;
  margin-right: 70px;
}

/*********** footer ***********/
footer {
  width: 100vw;
  text-align: center;
  background-color: #434343;
}
#foot-text {
  padding-top: 20px;
  padding-bottom: 20px;
}
#footer-link {
  color: #cdaaff;
  text-decoration: none;
}
#footer-link:hover {
  color: #6cc644;
  text-decoration: none;
}



/*************** @media **************/
@media (max-width: 1450px) {
  .subtitle-large {
    font-size: 20px;
  }
  .subtitle-small {
    font-size: 1px;
  }
}
@media (max-width: 1260px) {
  .header-container {
    width: 88vw;
  }
  .subsection {
    width: 88vw;
  }
}
@media (max-width: 1110px) {
  .header-container {
    width: 96vw;
  }
  .subsection {
    width: 96vw;
  }
}
@media (max-width: 1063px) {
  .package-container {
    display: flex;
    flex-direction: column;
  }
  .package {
    background-color: #f9f9fa;
    height: 100px;
    width: 96vw;
    min-width: none;
    min-height: none;
    margin-bottom: 20px;
  }
  #about {
    margin-right: 40px;
  }
}
@media (max-width: 948px) {
  .main {
    padding-top: 60px;
  }
  .header-large {
    height: 70px;
    transition: 0.3s;
  }
  .image-large {
    height: 70px;
    transition: 0.3s;
  }
  .title-large {
    font-size: 40px;
    transition: 0.3s;
  }
  .subtitle-large {
    font-size: 15px;
  }
  .header-small {
    height: 40px;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: #c0c0c0;
    min-width: 0;
  }
  .image-small {
    height: 40px;
  }
  .title-small {
    font-size: 30px;
  }
  .subtitle-small {
    font-size: 1px;
    opacity: 0;
  }
}

@media (max-width: 863px) {
  #bottom-third {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
  }
  #contact, #about {
    width: 96%;
  }
  #contact-heading {
    padding: 30px 0 0 0;
  }
  #about-heading {
    padding: 0;
  }
}

@media (max-width: 780px) {
  #nav-bar {
    font-size: 14px;
    display: flex;
    justify-content: flex-end;
    min-width: 0px;
  }
  .nav-container {
    min-width: 110px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-align: end;
  }
  .header-small {
    height: 60px;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: #c0c0c0;
    min-width: 0;
  }
  .image-small {
    height: 60px;
  }
}

@media (max-width: 560px) {
.title-large {
    font-size: 26px;
    transition: 0.3s;
  }
  .subtitle-large {
    display:none;
  }
  #header-image {
    padding-right: 0;
    margin-right: 0;
  }
  .icon-title-container {
    padding-left: 0;
    margin-left: 0;
  }
}

